@@ -2182,21 +2182,6 @@
                         <dependency type="visible" setting="kitsu.enabled">true</dependency>
                     </dependencies>
                 </setting>
-<!--                <setting id="kitsu.titles" type="integer" label="30225" parent="kitsu.enabled" help="">-->
-<!--                    <level>0</level>-->
-<!--                    <default>0</default>-->
-<!--                    <constraints>-->
-<!--                        <options>-->
-<!--                            <option label="Canonical">0</option>-->
-<!--                            <option label="Romanized">1</option>-->
-<!--                            <option label="English">2</option>-->
-<!--                        </options>-->
-<!--                    </constraints>-->
-<!--                    <control type="spinner" format="string" />-->
-<!--                    <dependencies>-->
-<!--                        <dependency type="visible" setting="kitsu.enabled">true</dependency>-->
-<!--                    </dependencies>-->
-<!--                </setting>-->
             </group>
 
             <!-- Simkl -->
@@ -2231,13 +2216,14 @@
                 </setting>
                 <setting id="simkl.sort" type="integer" label="30292"  parent="simkl.enabled" help="">
                     <level>0</level>
-                    <default>0</default>
+                    <default>3</default>
                     <constraints>
                         <options>
-                            <option label="Last Updated">0</option>
-                            <option label="Last Added">1</option>
-                            <option label="Anime Title">2</option>
-                            <option label="User Rating">3</option>
+                            <option label="Anime Title">0</option>
+                            <option label="User Score">1</option>
+                            <option label="Progress">2</option>
+                            <option label="Last Updated">3</option>
+                            <option label="Last Added">4</option>
                         </options>
                     </constraints>
                     <control type="spinner" format="string"/>
@@ -2245,15 +2231,13 @@
                         <dependency type="visible" setting="simkl.enabled">true</dependency>
                     </dependencies>
                 </setting>
-                <setting id="simkl.sort" type="integer" label="30292"  parent="simkl.enabled" help="">
+                <setting id="simkl.order" type="integer" label="30293"  parent="simkl.enabled" help="">
                     <level>0</level>
                     <default>0</default>
                     <constraints>
                         <options>
-                            <option label="Last Updated">0</option>
-                            <option label="Last Added">1</option>
-                            <option label="Anime Title">2</option>
-                            <option label="User Rating">3</option>
+                            <option label="Ascending">0</option>
+                            <option label="Descending">1</option>
                         </options>
                     </constraints>
                     <control type="spinner" format="string"/>
