@@ -1,3 +1,6 @@
+Changelog v5.1.82 (2025-03-22):
+- Small fixes to Simkl
+
 Changelog v5.1.81 (2025-03-21):
 - Recoded Watchlist Sorting
 - Added Watchlist Ordering Setting
